
2001-02-06	Joel Sherrill <joel@OARcorp.com>

	* include/ioccom.h: Unreferenced and thus removed.

2001-02-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/zilog/Makefile.am, include/Makefile.am, 
	include/motorola/Makefile.am, include/sys/Makefile.am
	include/rtems/Makefile.am: Apply include_*HEADERS instead of
	H_FILES.

2001-01-26	Joel Sherrill <joel@OARcorp.com>

	* libc/chroot.c: Fixed naming problems.  Names were changed
	when the code this depends on was merged.

2001-01-25	Fernando Ruiz <fernando.ruiz@ctv.es>

	* Alternate email is correo@fernando-ruiz.com
	* libc/chroot.c: New file.
	* libc/Makefile.am: Reflect above.

2001-01-25	Fernando Ruiz <fernando.ruiz@ctv.es>

	* Alternate email is correo@fernando-ruiz.com
	* libc/privateenv.c: New file.
	* include/rtems/libio_.h, libc/Makefile.am, libc/base_fs.c, 
	libc/unmount.c: Moved default umask, current working directory,
	root, and links followed count into a structure "user environment"
	that can then be treated as a unit.  This enable giving unique
	copies of these to individual threads or collection of threads.

2001-01-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add libc/config.h
	* libc/Makefile.am: Add INCLUDES += -I. to pickup config.h
	* libc/.cvsignore: Add config.h and stamp-h
	* libc/*.c: Add config.h support.

2000-12-06	Joel Sherrill <joel@OARcorp.com>

	* libc/mallocfreespace.c: Name of routine is
	rtems_region_get_information() NOT region_get_information().
	* libc/unmount.c: Removed unused variable.

2000-11-30	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/Makefile.am: Added termiostypes.h.
	* libc/Makefile.am: Removed termiostypes.h.
	* libc/termios.c: Changed include of "termiostypes.h" to
	<rtems/termiostypes.h> since that is an RTEMS specific header file.

2000-11-29	Joel Sherrill <joel@OARcorp.com>

	* include/sys/ttycom.h: New file -- moved from libnetworking/sys.
	* Makefile.am: Modified to reflect above.

2000-11-28	 Sergei Organov <osv@javad.ru>
